--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   path_provider: ^2.1.4
   file_picker: ^8.1.2
   firebase_app_check: ^0.3.1+2
+
   
 dev_dependencies:
   flutter_test:
@@ -67,7 +68,7 @@ dev_dependencies:
 
 flutter_launcher_icons:
   android: true
-  ios: trueon  ru
+  ios: true
   image_path: "assets/icon/icon.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -92,6 +93,7 @@ flutter:
   assets:
     - assets/images/
     - assets/animation/
+    - assets/animation/hello.json
 
 
 
