--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,11 +54,16 @@ dependencies:
   firebase_app_check: ^0.3.1+2
   flutter_markdown: ^0.7.3+2
 
+
   
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  flutter_launcher_icons: ^0.14.1
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/icon.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
